--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "redux": "^3.7.0"
   },
   "devDependencies": {
+    "react-devtools": "^2.3.3",
     "react-scripts": "1.0.7"
   },
   "scripts": {
